--- a/produk-detail.html
+++ b/produk-detail.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Detail Produk | Qonkar Enterpris</title>
+    <title>Detail Produk | Qonkar Enterprise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
     <div class="top-header">
         <div class="logo">
             <a href="index.html">
-                <img src="assets/logo/logo.png">
+                <img src="lgoqnkr-.png">
             </a>
         </div>
     </div>
@@ -77,3 +77,4 @@
 
 </body>
 </html>
+
