--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="top-header">
         <div class="logo">
             <a href="index.html">
-                <img src="assets/logo/logo.png" alt="Qonkar Enterpris">
+                <img src="lgoqnkr-.png" alt="Qonkar Enterpris">
             </a>
         </div>
 
@@ -153,3 +153,4 @@
 
 </body>
 </html>
+
